syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

import "common.proto";
import "google/protobuf/timestamp.proto";

// Just used as parameter of consensus contract method.
message Term {
    Miners Miners = 1;
    Round FirstRound = 2;
    Round SecondRound = 3;
    int32 MiningInterval = 4;
    uint64 TermNumber = 5;
    google.protobuf.Timestamp Timestamp = 6;
}

// Just used as parameter of consensus contract method.
message Forwarding {
    Round CurrentRoundInfo = 1;
    Round NextRoundInfo = 2;
    uint64 CurrentAge = 3;
}

// Just used as parameter of consensus contract method.
message ToPackage {
    Hash OutValue = 1;
    Hash Signature = 2;
    int64 RoundId = 3;
}

// Just used as parameter of consensus contract method.
message ToBroadcast {
    Hash InValue = 1;
    int64 RoundId = 2;
}

// The miners public key list for each term.
message Miners {
    uint64 TermNumber = 1;
    repeated string PublicKeys = 2;
    uint64 MainchainLatestTermNumber = 3;// Shouldn't be updated if TermNumber > 1
    string Remark = 4;
}

// To query to first round number of each term.
message TermNumberLookUp {
    map<uint64, uint64> Map = 1;// Term number -> Round number.
}

// All the candidates.
message Candidates {
    repeated string PublicKeys = 1;
    bool IsInitialMiners = 2;
}

// The ticket / voting information for one user.
message Tickets {
    repeated VotingRecord VotingRecords = 1;
    uint64 VotingRecordsCount = 2;
    uint64 ObtainedTickets = 3;
    uint64 VotedTickets = 4;
    uint64 HistoryObtainedTickets = 5;
    uint64 HistoryVotedTickets = 6;
    string Remark = 7;
    repeated Hash VoteToTransactions = 8;
    repeated Hash VoteFromTransactions = 9;
}

// A voting record.
message VotingRecord {
    string From = 1;
    string To = 2;
    uint64 Count = 3;
    uint64 RoundNumber = 4;
    Hash TransactionId = 5;
    uint64 VoteAge = 6;
    repeated int32 LockDaysList = 7;// Can be renewed by adding items.
    uint64 UnlockAge = 8;
    uint64 TermNumber = 9;
    google.protobuf.Timestamp UnlockTimestamp = 10;
    google.protobuf.Timestamp WithdrawTimestamp = 11;
    google.protobuf.Timestamp VoteTimestamp = 12;
    bool IsWithdrawn = 13;
}

// The snap shot of one term.
message TermSnapshot {
    uint64 EndRoundNumber = 1;
    uint64 TotalBlocks = 2;
    repeated CandidateInTerm CandidatesSnapshot = 3;
    uint64 TermNumber = 4;
    string Remark = 5;
}

// The information of a candidate of a specific term.
message CandidateInTerm {
    string PublicKey = 1;
    uint64 Votes = 2;
}

// The information of a round.
message Round {
    uint64 RoundNumber = 1;
    map<string, MinerInRound> RealTimeMinersInfo = 2;
    int32 MiningInterval = 3;
    uint64 BlockchainAge = 4;
    uint64 MinersTermNumber = 5;
    string Remark = 6;
}

// The information of a miner in a specific round.
message MinerInRound {
    int32 Order = 1;
    bool IsExtraBlockProducer = 2;
    Hash InValue = 3;
    Hash OutValue = 4;
    Hash Signature = 5;
    google.protobuf.Timestamp ExpectedMiningTime = 6;
    uint64 ProducedBlocks = 7;
    bool IsForked = 8;
    uint64 MissedTimeSlots = 9;
    uint64 RoundNumber = 10;
    string PublicKey = 11;
    uint64 PackagedTxsCount = 12;
    uint64 LatestMissedTimeSlots = 13;
    bool IsMissed = 14;
}

// The information of a candidate.
message CandidateInHistory {
    string PublicKey = 1;
    repeated uint64 Terms = 2;
    uint64 ProducedBlocks = 3;
    uint64 MissedTimeSlots = 4;
    uint64 ContinualAppointmentCount = 5;
    uint64 ReappointmentCount = 6;
    repeated string Aliases = 7;
    string CurrentAlias = 8;
    uint64 CurrentVotesNumber = 9;
    string Remark = 10;
}

message TicketsDictionary {
    map<string, Tickets> Maps = 1;
    string Remark = 2;
}

message CandidateInHistoryDictionary {
    map<string, CandidateInHistory> Maps = 1;
    string Remark = 2;
    int32 CandidatesNumber = 3;
}

message TicketsHistories {
    repeated TicketsHistory Values = 1;
    uint64 HistoriesNumber = 2;
    string Remark = 3;
}

message TicketsHistory {
    string CandidateAlias = 1;
    uint64 VotesNumber = 2;
    google.protobuf.Timestamp Timestamp = 3;
    bool State = 4;
    TicketsHistoryType Type = 5;
}

enum TicketsHistoryType {
    None = 0;
    Redeem = 1;
    Vote = 2;
}